// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableSortHeader > renders the ascending state 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          aria-sort="ascending"
          scope="col"
        >
          <button
            class="_button_36696c"
            type="button"
          >
            Name
            <svg
              aria-hidden="true"
              class="_indicator_36696c"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 22 22"
            >
              <path
                d="M6.5625 15.5L11 6.63125L15.4375 15.5H6.5625Z"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`TableSortHeader > renders the ascending state 2`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          aria-sort="ascending"
          scope="col"
        >
          <a
            class="_button_36696c"
            href="#descending"
          >
            Name
            <svg
              aria-hidden="true"
              class="_indicator_36696c"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 22 22"
            >
              <path
                d="M6.5625 15.5L11 6.63125L15.4375 15.5H6.5625Z"
              />
            </svg>
          </a>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`TableSortHeader > renders the descending state 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          aria-sort="descending"
          scope="col"
        >
          <button
            class="_button_36696c"
            type="button"
          >
            Name
            <svg
              aria-hidden="true"
              class="_indicator_36696c"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 22 22"
            >
              <path
                d="M15.4375 7L11 15.8687L6.5625 7L15.4375 7Z"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`TableSortHeader > renders the descending state 2`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          aria-sort="descending"
          scope="col"
        >
          <a
            class="_button_36696c"
            href="#ascending"
          >
            Name
            <svg
              aria-hidden="true"
              class="_indicator_36696c"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 22 22"
            >
              <path
                d="M15.4375 7L11 15.8687L6.5625 7L15.4375 7Z"
              />
            </svg>
          </a>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`TableSortHeader > renders the none state 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          aria-sort="none"
          scope="col"
        >
          <button
            class="_button_36696c"
            type="button"
          >
            Name
            <svg
              aria-hidden="true"
              class="_indicator_36696c"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 22 22"
            >
              <path
                d="M8.1875 9.5L10.9609 3.95703L13.7344 9.5H8.1875Z"
              />
              <path
                d="M13.7344 12.0781L10.9609 17.6211L8.1875 12.0781H13.7344Z"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`TableSortHeader > renders the none state 2`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          aria-sort="none"
          scope="col"
        >
          <a
            class="_button_36696c"
            href="#ascending"
          >
            Name
            <svg
              aria-hidden="true"
              class="_indicator_36696c"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 22 22"
            >
              <path
                d="M8.1875 9.5L10.9609 3.95703L13.7344 9.5H8.1875Z"
              />
              <path
                d="M13.7344 12.0781L10.9609 17.6211L8.1875 12.0781H13.7344Z"
              />
            </svg>
          </a>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;
